# muppets

./: .gitignore  BACKPORT-PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT-PRINCIPLES.md  Makefile  README.md  SETUP-COMPLETE.md  muppet-platform.yaml  test_webhook_payload.json
platform/: .env.local  .env.real  .flake8  DEPLOYMENT.md  Makefile  README.md  config.yaml  debug_env_validation.py  debug_github.py  debug_github_repos.py  debug_node_template.py  debug_templates.py  debug_validation.py  docker-compose.local.yml  fix_code_quality.py  fix_existing_repos.py  mcp_http_bridge.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup-uv.sh  test_deployed_validation.py  test_end_to_end.py  test_enhanced_auto_generation.py  test_muppet_creation_detailed.py  test_node_express.py  test_node_express_simple.py  test_template_comparison.py  test_topics.py  trigger_validation_test.py
platform/.hypothesis/: settings.json
platform/docker/: .gitkeep  Dockerfile  install-deps.sh
platform/docs/: github-manager-implementation.md  muppet-verification-system.md
platform/examples/: __init__.py  github_manager_example.py
platform/infrastructure-templates/: config.yaml
platform/manual-tests/: COMPLETION_SUMMARY.md
platform/scripts/: build.sh  health-check.sh  localstack-init.sh  run.sh  setup-local-dev.sh  setup-real-integrations.sh  stop.sh  test-mcp-tool.sh  test.sh  validate-infrastructure-templates.sh  validate-manual-testing.sh  verify-muppet-instantiation.sh
platform/src/: .gitkeep  __init__.py  config.py  exceptions.py  logging_config.py  main.py  models.py  state_manager.py
platform/terraform/: .gitkeep  README.md  certificates.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
platform/tests/: .gitkeep  (+25 more)
(+559 files in other folders)
